# simple-agent

./: .gitignore  README.md  package.json  test.ts  vite.config.ts
.codex/environments/: environment.toml
docs/: rust-command-shell-args.md  serde-deserialize-from.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/context/: mod.rs  session_context.rs  workspace.rs
src-tauri/src/event/: mod.rs
src-tauri/src/path/: mod.rs
src-tauri/src/permission/: mod.rs
src-tauri/src/prompt/: mod.rs
src-tauri/src/tools/: edit_file.rs  get_weather.rs  mod.rs  read_file.rs  shell.rs
test/: test.ts
