[package]
name = "simple-agent"
version = "0.1.0"
description = "A Tauri App for simple agent"
authors = ["ThousandDream"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simple_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-format = "0.4.4"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = {version = "1.52.3",features = ["macros"] }
schemars = "0.8.22"
anyhow = "1.0.102"
reqwest-sse = "0.2.0"
tokio-stream = "0.1.18"
eventsource-stream = "0.2.3"
tauri-plugin-dialog = "2"
directories = "6.0.0"
dotenvy = "0.15.7"
